test/pass/classes/covariant_prop.lily
class One {}
class Two < One {}

class Test {
    var @a: One = Two()
    @a = One()
}
